# tv

./: .gitignore  Arthur.md  Arthur2.md  CLAUDE.md  Cargo.toml  Done.md  PROJECT_MEMORY.md  README.md  Stdlib.md  Suggestions.md  done.md  funcs.prql  gen_sample.py  halstead.json  halstead_before.json  idea.txt  metric.20251212154151  metric.20251212154618  metric.20251212155049  metric.all_dry.json  nushell.md  require.md  sim.md  tabv  test_freq.txt  test_freq_city.txt  test_freq_name.txt  tv  tv-plot  unix.md  visidata.md  worklog.md
.claude/commands/: dry.md
cfg/: config.csv  funcs.4th  funcs.prql  key.csv  plugins.csv  themes.csv
crates/plotgram/: Cargo.toml  DESIGN.md
crates/plotgram/src/: lib.rs
crates/tv-adbc/: Cargo.toml
crates/tv-adbc/src/: lib.rs
crates/tv-duckdb/: Cargo.toml
crates/tv-duckdb/src/: lib.rs
crates/tv-plot/: Cargo.toml
crates/tv-plot/src/: lib.rs  main.rs  render.rs
crates/tv-plugin-api/: Cargo.toml  funcs.prql
crates/tv-plugin-api/src/: lib.rs  prql.rs  source.rs
crates/tv-polars/: Cargo.toml
crates/tv-polars/src/: lib.rs
crates/tv-sqlite/: Cargo.toml
crates/tv-sqlite/src/: lib.rs  source.rs
docs/: prql-integration.md
scripts/: adbc-sys.sh
src/: app.rs  backend.rs  connector.rs  dynload.rs  error.rs  funcs.rs  keyhandler.rs  keymap.rs  main.rs  os.rs  picker.rs  prql.rs  pure.rs  sqlite.rs  state.rs  table.rs  theme.rs  utils.rs
src/backend/: duckapi.rs  duckcli.rs  gz.rs  memory.rs  mod.rs  polars.rs
src/command/: executor.rs  io.rs  mod.rs  nav.rs  transform.rs  view.rs
src/command/io/: convert.rs  csv.rs  duckdb.rs  gz.rs  mod.rs  parquet.rs
src/data/: backend.rs  dynload.rs  mod.rs  source.rs  table.rs
src/input/: handler.rs  keyhandler.rs  keymap.rs  mod.rs  parser.rs  prompt.rs
src/plugin/: corr.rs  folder.rs  freq.rs  meta.rs  mod.rs  pivot.rs  system.rs
src/render/: mod.rs  renderer.rs  terminal.rs
src/source/: gz.rs  memory.rs  mod.rs  polars.rs
src/util/: mod.rs  picker.rs  pure.rs
src/view/: folder.rs  freq.rs  handler.rs  meta.rs  mod.rs  table.rs
tests/: integration.rs  test_command.rs  test_commands.sh  test_filter.rs  test_folder.rs  test_freq.sh  test_keys.rs  test_large_parquet.rs  test_ls.sh  test_meta.rs  test_meta.sh  test_parquet.rs  test_plugin.rs  test_string_filter.sh  test_system.rs
tests/common/: mod.rs
tests/data/: sample.csv  sample.parquet
tests/data/hive/date=2024-01-01/: data.parquet
tests/data/hive/date=2024-01-02/: data.parquet
tests/data/hive/date=2024-01-03/: data.parquet
tests/data/hive/date=2024-01-04/: data.parquet
tests/data/hive/date=2024-01-05/: data.parquet
tool/: measure.py
tools/: bench.sh  bench_results.md  dump_cargo.py  dump_journal.py  gen_sample.py
