[workspace]
members = [".", "crates/tv-plugin-api", "crates/tv-polars", "crates/tv-sqlite", "crates/tv-duckdb"]

[package]
name = "tv"
version = "0.1.0"
edition = "2024"

[profile.release]
# lto = true        # 95MB vs 119MB, +1m20s build - disabled for faster builds
# strip = true
# codegen-units = 1

[dependencies]
tv-plugin-api = { path = "crates/tv-plugin-api" }
libloading = "0.8"
prqlc = "0.13"
ratatui = "0.30.0-beta.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"
dirs = "6"
nix = { version = "0.30", features = ["fs", "process"] }
serde_json = "1.0"
