[workspace]
members = [".", "crates/tv-plot"]

[package]
name = "tabv"
version = "0.1.0"
edition = "2024"
description = "Fast terminal table viewer for CSV and Parquet files"
license = "MIT"
repository = "https://github.com/co-dh/tv"

[profile.release]
strip = true
# lto = true        # 95MB vs 119MB, +1m20s build - disabled for faster builds
# codegen-units = 1

[dependencies]
ratatui = "0.30.0-beta.0"
anyhow = "1.0"
thiserror = "2.0"
nix = { version = "0.30", features = ["fs", "process"] }
serde_json = "1.0"
lru = "0.12"
# ADBC for DuckDB backend
adbc_core = "0.21"
adbc_driver_manager = "0.21"
arrow-array = "55"
arrow-schema = "55"

[dev-dependencies]
chrono = "0.4"
