[package]
name = "tv-adbc"
version = "0.1.0"
edition = "2021"
description = "ADBC plugin for tabv - external database connectivity via Arrow"

[lib]
crate-type = ["cdylib"]

[dependencies]
tv-plugin-api = { path = "../tv-plugin-api" }
adbc_core = "0.21"
adbc_driver_manager = "0.21"
arrow-array = "55"
arrow-schema = "55"
