[package]
name = "tv-sqlite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tv-plugin-api = { path = "../tv-plugin-api" }
rusqlite = { version = "0.32", features = ["vtab", "bundled"] }
chrono = "0.4"
serde_json = "1.0"
nix = { version = "0.29", features = ["process"] }
dirs = "5"
